--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "db": "json-server --watch db.json",
+    "db": "json-server --watch db.json -p 3030",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
